타이머 질문하기

--- a/10_26/과제_링컨자동차코리아_메인슬라이드_제작_구현/index.html
+++ b/10_26/과제_링컨자동차코리아_메인슬라이드_제작_구현/index.html
@@ -21,8 +21,8 @@
 
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/style.css">
+
     <!-- 오픈소스 -->
-    
     <script src="./js/lib/jquery-1.12.4.min.js"></script>
     <script src="./js/lib/prefixfree.min.js"></script>
     <script src="./js/lib/jquery.touchSwipe.js"></script> <!-- 터치 가능하게 해주는 제이쿼리 라이브러리 -->
@@ -70,21 +70,37 @@
                     <div class="slide-container">
                         <div class="slide-view">
                             <ul class="slide-wrap fixedclear">
-                                <li class="slide slide4"><div><a href="javascript:void(0)" title="Slide4"><img src="./img/billboard-pc-3.jpg" alt="PHEV GRAND TOURING"></a></div></li>
-                                <li class="slide slide1"><div><a href="javascript:void(0)" title="Slide0"><img src="./img/aviator_mo_product_01.jpg" alt="3.L RESERVE"></a></div></li>
-                                <li class="slide slide0"><div><a href="javascript:void(0)" title="Slide1"><img src="./img/aviator-billboard-gt-desktop.jpg" alt="THE ALL NEW LINCOLN AVIATOR"></a></div></li>
-                                <li class="slide slide2"><div><a href="javascript:void(0)" title="Slide2"><img src="./img/aviator_pc_product_02.jpg" alt="BLACK LABEL"></a></div></li>
-                                <li class="slide slide3"><div><a href="javascript:void(0)" title="Slide3"><img src="./img/aviator_pc_product_03.jpg" alt="PHEV GRAND TOURING"></a></div></li>
-                                <li class="slide slide4"><div><a href="javascript:void(0)" title="Slide4"><img src="./img/billboard-pc-3.jpg" alt="PHEV GRAND TOURING"></a></div></li>
-                                <li class="slide slide0"><div><a href="javascript:void(0)" title="Slide0"><img src="./img/aviator-billboard-gt-desktop.jpg" alt="THE ALL NEW LINCOLN AVIATOR"></a></div></li>
+                                <li class="slide slide4"><a href="#" title="Slide4"><div><img src="./img/billboard-pc-3.jpg" alt="LINCOLN MKZ"></div></a></li>
+                                <li class="slide slide1"><a href="#" title="Slide0"><div><img src="./img/aviator_mo_product_01.jpg" alt="THE ALL NEW LINCOLN AVIATOR"></div></a></li>
+                                <li class="slide slide0"><a href="#" title="Slide1"><div><img src="./img/corsair-billboard-02.jpg" alt="THE ALL NEW LINCOLN CORSAIR"></div></a></li>
+                                <li class="slide slide2"><a href="#" title="Slide2"><div><img src="./img/lboard_Carousel-Billboard-1-Desktop.jpg" alt="NEW LINCOLN NAUTILUS"></div></a></li>
+                                <li class="slide slide3"><a href="#" title="Slide3"><div><img src="./img/billboard-continental-3.jpg" alt="LINCOLN CONTINENTAL"></div></a></li>
+                                <li class="slide slide4"><a href="#" title="Slide4"><div><img src="./img/billboard-pc-3.jpg" alt="LINCOLN MKZ"></div></a></li>
+                                <li class="slide slide0"><a href="#" title="Slide0"><div><img src="./img/aviator_mo_product_01.jpg" alt="THE ALL NEW LINCOLN AVIATOR"></div></a></li>
                             </ul>
                         </div>
                     </div>
-                    <div class="slide-btn"><a href="javascript:void(0)" title="next-button"><img src="./i" alt=""></a></div>
+                    <div class="slide-btn">
+                        <ul>
+                            <li><a href="javascript:void(0)" class="next-button" title="다음버튼">></a></li>
+                            <li><a href="javascript:void(0)" class="prev-button" title="이전버튼"><</a></li>
+                        </ul>
+                    </div>
+                    <div class="indicator">
+                        <ul class="fixedclear">
+                            <li><a href="javascript:void(0)" class="indacator-btn addBtn" title="라디오버튼2"></a></li>
+                            <li><a href="javascript:void(0)" class="indacator-btn" title="라디오버튼1"></a></li>
+                            <li><a href="javascript:void(0)" class="indacator-btn" title="라디오버튼3"></a></li>
+                            <li><a href="javascript:void(0)" class="indacator-btn" title="라디오버튼4"></a></li>
+                            <li><a href="javascript:void(0)" class="indacator-btn" title="라디오버튼5"></a></li>
+                        </ul>
+                    </div>
                 </section>
             </div>
         </main>
         <footer id="footer"></footer>
+
+        <script src="./js/index.js"></script>
     </div>
 
 </body>
