링컨자동차 슬라이드 수업 - 낼 아침에 깔끔하게 다시, css  roatet도 해봐

--- a/10_26/10_26_프로젝트_링컨자동차/index.html
+++ b/10_26/10_26_프로젝트_링컨자동차/index.html
@@ -74,13 +74,15 @@
                 </div>
 
                 <ul class="page-btn-wrap">
-                    <li><a href="#" class="page-btn blind" title="page button">pageBtn</a></li>
+                    <li class="addPage"><a href="#" class="page-btn blind" title="page button">pageBtn</a></li>
                     <li><a href="#" class="page-btn blind" title="page button">pageBtn</a></li>
                     <li><a href="#" class="page-btn blind" title="page button">pageBtn</a></li>
                     <li><a href="#" class="page-btn blind" title="page button">pageBtn</a></li>
                     <li><a href="#" class="page-btn blind" title="page button">pageBtn</a></li>
                 </ul>
 
+                <span class="next-btn-wrap"><a href="#" class="next-btn"><i class="icon-next"></i></a></span>
+                <span class="prev-btn-wrap"><a href="#" class="prev-btn"><i class="icon-prev"></i></a></span>
             </div>
         </section>
     </main>
