--- a/10_27/10_27_프로젝트_링컨자동차_슬라이드마무리_혼자하기/index.html
+++ b/10_27/10_27_프로젝트_링컨자동차_슬라이드마무리_혼자하기/index.html
@@ -8,7 +8,7 @@
     <meta name="Viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Title" content="Lincoln Korea">
     <meta name="Publisher" content="프론트엔드 박소혜">
-    <meta name="Author-date" content="2020-10-26"> 
+    <meta name="Author-date" content="2020-10-27"> 
     <meta name="Author" content="Lincoln Korea">
     <meta name="Copyright" content="Lincoln Korea">
     <meta name="Keywords" content="Lincoln Korea">
@@ -63,35 +63,34 @@
             <div class="slide-container">
                 <div class="slide-view">
                     <ul class="slide-wrap fixedclear">
-                        <li class="slide slide4"><div><a href="#" title="slide4"><img src="./img/slide_04.jpg" alt="슬라이드4"></a></div></li>
-                        <li class="slide slide0"><div><a href="#" title="slide0"><img src="./img/slide_00.jpg" alt="슬라이드0"></a></div></li>
-                        <li class="slide slide1"><div><a href="#" title="slide1"><img src="./img/slide_01.jpg" alt="슬라이드1"></a></div></li>
-                        <li class="slide slide2"><div><a href="#" title="slide2"><img src="./img/slide_02.jpg" alt="슬라이드2"></a></div></li>
-                        <li class="slide slide3"><div><a href="#" title="slide3"><img src="./img/slide_03.jpg" alt="슬라이드3"></a></div></li>
-                        <li class="slide slide4"><div><a href="#" title="slide4"><img src="./img/slide_04.jpg" alt="슬라이드4"></a></div></li>
-                        <li class="slide slide0"><div><a href="#" title="slide0"><img src="./img/slide_00.jpg" alt="슬라이드0"></a></div></li>
+                        <li class="slide slide4"><div><a href="#" title="slide4"><img src="./img/slide_04.jpg" alt=""></a></div></li>
+                        <li class="slide slide0"><div><a href="#" title="slide0"><img src="./img/slide_00.jpg" alt=""></a></div></li>
+                        <li class="slide slide1"><div><a href="#" title="slide1"><img src="./img/slide_01.jpg" alt=""></a></div></li>
+                        <li class="slide slide2"><div><a href="#" title="slide2"><img src="./img/slide_02.jpg" alt=""></a></div></li>
+                        <li class="slide slide3"><div><a href="#" title="slide3"><img src="./img/slide_03.jpg" alt=""></a></div></li>
+                        <li class="slide slide4"><div><a href="#" title="slide4"><img src="./img/slide_04.jpg" alt=""></a></div></li>
+                        <li class="slide slide0"><div><a href="#" title="slide0"><img src="./img/slide_00.jpg" alt=""></a></div></li>
                     </ul>
                 </div>
-                
-                <span class="next-btn-wrap"><a href="#" class="next-btn blind" title="다음슬라이드"><i class="icon-next">다음슬라이드</i></a></span>
-                <span class="prev-btn-wrap"><a href="#" class="prev-btn blind" title이전="슬라이드"><i class="icon-prev">이전슬라이드</i></a></span>
+
+                <span class="next-btn-wrap"><a href="#" class="next-btn"><i class="icon-next"></i></a></span>
+                <span class="prev-btn-wrap"><a href="#" class="prev-btn"><i class="icon-prev"></i></a></span>
 
                 <ul class="page-btn-wrap">
-                    <li class="addPage"><a href="#" class="page-btn blind" title="page button">페이지버튼</a></li>
-                    <li><a href="#" class="page-btn blind" title="page button">페이지버튼</a></li>
-                    <li><a href="#" class="page-btn blind" title="page button">페이지버튼</a></li>
-                    <li><a href="#" class="page-btn blind" title="page button">페이지버튼</a></li>
-                    <li><a href="#" class="page-btn blind" title="page button">페이지버튼</a></li>
+                    <li class="addPage"><a href="#" class="page-btn blind" title="page button">pageBtn</a></li>
+                    <li><a href="#" class="page-btn blind" title="page button">pageBtn</a></li>
+                    <li><a href="#" class="page-btn blind" title="page button">pageBtn</a></li>
+                    <li><a href="#" class="page-btn blind" title="page button">pageBtn</a></li>
+                    <li><a href="#" class="page-btn blind" title="page button">pageBtn</a></li>
                 </ul>
-                
+
             </div>
         </section>
     </main>
     <footer id="footer">
 
     </footer>
-
-    <script src="./js/main_slide.js"></script>
+    <script src="./js/main-slide.js"></script>
 </div>
 </body>
 </html>
