슬라이드 혼자하기

--- a/10_28/10_28_프로젝트_스타벅스_섹션_5-7_스크롤이벤트_애니메이션/index.html
+++ b/10_28/10_28_프로젝트_스타벅스_섹션_5-7_스크롤이벤트_애니메이션/index.html
@@ -656,6 +656,7 @@
     <script src="./js/section2-3.js"></script>
     <script src="./js/section3.js"></script>
     <script src="./js/section5.js"></script>
+    <!-- <script src="./js/section5_animate.js"></script> -->
 
 
 
