스타벅스 프로젝트 완료

--- a/10_29/10_29_프로젝트_스타벅스_푸터까지_혼자해보기/index.html
+++ b/10_29/10_29_프로젝트_스타벅스_푸터까지_혼자해보기/index.html
@@ -746,13 +746,15 @@
                             </ul>
                         </li>
                         <li class="f3-row2">
-                            <ul>
-
+                            <ul class="fixedclear">
+                                <li><a href="#">찾아오시는 길</a></li>
+                                <li><a href="#">신규입점제의</a></li>
+                                <li><a href="#">사이트맵</a></li>
                             </ul>
                         </li>
                         <li class="f3-row3">
                             <ul>
-
+                                
                             </ul>
                         </li>
                         <li class="f3-row4">
@@ -764,7 +766,7 @@
                 </li>
             </ul>
     </footer>
-    
+
     <!-- 웹 개발 스크립트 -->
     <script src="./js/header.js"></script>
     <script src="./js/section1.js"></script>
