--- a/10_30/10_30_프로젝트_스타벅스_푸터까지/index.html
+++ b/10_30/10_30_프로젝트_스타벅스_푸터까지/index.html
@@ -681,8 +681,107 @@
 
     <footer id="footer">
         <h2 class="hide">섹션</h2>
-        
+        <div class="row row1">
+            <div class="wrap">
+                <ul class="fixedclear">
+                    <li>
+                        <dl>
+                            <dt><a href="#" title="COMPANY">COMPANY</a></dt>
+                            <dd><a href="#" title="한눈에 보기">한눈에 보기</a></dd>
+                            <dd><a href="#" title="스타벅스 사명">스타벅스 사명</a></dd>
+                            <dd><a href="#" title="스타벅스 소개">스타벅스 소개</a></dd>
+                            <dd><a href="#" title="국내 뉴스룸">국내 뉴스룸</a></dd>
+                            <dd><a href="#" title="세계의 스타벅스">세계의 스타벅스</a></dd>
+                            <dd><a href="#" title="글로벌 뉴스룸">글로벌 뉴스룸</a></dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <dl>
+                            <dt><a href="#" title="COMPANY">COMPANY</a></dt>
+                            <dd><a href="#" title="한눈에 보기">한눈에 보기</a></dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <dl>
+                            <dt><a href="#" title="COMPANY">COMPANY</a></dt>
+                            <dd><a href="#" title="한눈에 보기">한눈에 보기</a></dd>
+                            <dd><a href="#" title="스타벅스 사명">스타벅스 사명</a></dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <dl>
+                            <dt><a href="#" title="COMPANY">COMPANY</a></dt>
+                            <dd><a href="#" title="한눈에 보기">한눈에 보기</a></dd>
+                            <dd><a href="#" title="스타벅스 사명">스타벅스 사명</a></dd>
+                            <dd><a href="#" title="스타벅스 소개">스타벅스 소개</a></dd>
+                            <dd><a href="#" title="국내 뉴스룸">국내 뉴스룸</a></dd>
+                            <dd><a href="#" title="세계의 스타벅스">세계의 스타벅스</a></dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <dl>
+                            <dt><a href="#" title="COMPANY">COMPANY</a></dt>
+                            <dd><a href="#" title="한눈에 보기">한눈에 보기</a></dd>
+                            <dd><a href="#" title="스타벅스 사명">스타벅스 사명</a></dd>
+                        </dl>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="row row2">
+            <div class="wrap">
+                <ul class="fixedclear">
+                    <li><a href="#" title=""><img src="./img/footer_award17_01.jpg" alt="footer_award17_01"></a></li>
+                    <li><a href="#" title=""><img src="./img/footer_award17_02.jpg" alt="footer_award17_02"></a></li>
+                    <li><a href="#" title=""><img src="./img/footer_award17_03.jpg" alt="footer_award17_03"></a></li>
+                    <li><a href="#" title=""><img src="./img/footer_award17_04.jpg" alt="footer_award17_04"></a></li>
+                    <li><a href="#" title=""><img src="./img/footer_award17_05.jpg" alt="footer_award17_05"></a></li>
+                    <li><a href="#" title=""><img src="./img/footer_award17_06.jpg" alt="footer_award17_06"></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row row3">
+            <div class="wrap">
+                <ul>
+                    <li>
+                        <span><a href="#">개인정보처리방침</a></span><span><i></i></span>
+                        <span><a href="#">영상정보처리기기 운영관리 방침</a></span><span><i></i></span>
+                        <span><a href="#">홈페이지 이용약관</a></span><span><i></i></span>
+                        <span><a href="#">위치정보 이용약관</a></span><span><i></i></span>
+                        <span><a href="#">스타벅스 카드 이용약관</a></span><span><i></i></span>
+                        <span><a href="#">비회원 이용약관</a></span><span><i></i></span>
+                        <span><a href="#">My DT Pass 서비스 이용약관</a></span><span><i></i></span>
+                        <span><a href="#">윤리경영 핫라인</a></span><span><i></i></span>
+                    </li>
+                    
+                    <li>
+                        <span><a href="#">찾아오시는 길</a></span>
+                        <span><a href="#">신규입점제의</a></span>
+                        <span><a href="#">사이트 맵</a></span>
+                    </li>
+
+                    <li>
+                        <address>
+                            <span>사업자등록번호 : 201-81-21515</span><span><i></i></span>
+                            <span>(주)스타벅스커피 코리아 대표이사 : 송 데이비드 호섭</span><span><i></i></span>
+                            <span>TEL : 1522-3232</span><span><i></i></span>
+                            <span>개인정보 책임자 : 장석현</span>
+                        </address>
+                    </li>
+                    <li>
+                        <span>&copy; 2020 Starbucks Coffee Company. All Rights Reserved.</span>
+                            <!--👆 = ⓒ -->
+                    </li>
+                </ul>
+            </div>
+        </div>
     </footer>
+    <div class="quick">
+        <span>
+            <a href="https://www.starbucks.co.kr/whats_new/campaign_view.do?pro_seq=1761" target="_self" title="2020년 크리스마스 프리퀀시에 참여해보세요."><img src="./img/badge_efreq_pc_2020winter.png" alt="자세히 보기"></a>
+            <a href="https://www.starbucks.co.kr/plcc/promotionView.do?eventCode=STH02"   target="_self" title="스타벅스+현대카드"><img src="./img/plcc_badge_pc.png" alt="hyndaicard + starbucks"></a>
+        </span>
+    </div>
 
 
     <!-- 웹 개발 스크립트 -->
