--- a/10_29/10_29_프로젝트_스타벅스_푸터까지_혼자해보기/index.html
+++ b/10_29/10_29_프로젝트_스타벅스_푸터까지_혼자해보기/index.html
@@ -722,12 +722,12 @@
             <li class="footer2">
                 <ul>
                     <div class="f2-wrap fixedclear">
-                        <li><a href="javascript:void(0)"><img src="./img/footer_award17_01" alt=""></a></li>
-                        <li><a href="javascript:void(0)"><img src="./img/footer_award17_02" alt=""></a></li>
-                        <li><a href="javascript:void(0)"><img src="./img/footer_award17_03" alt=""></a></li>
-                        <li><a href="javascript:void(0)"><img src="./img/footer_award17_04" alt=""></a></li>
-                        <li><a href="javascript:void(0)"><img src="./img/footer_award17_05" alt=""></a></li>
-                        <li><a href="javascript:void(0)"><img src="./img/footer_award17_06" alt=""></a></li>
+                        <li><a href="javascript:void(0)"><img src="./img/footer_award17_01.jpg" alt=""></a></li>
+                        <li><a href="javascript:void(0)"><img src="./img/footer_award17_02.jpg" alt=""></a></li>
+                        <li><a href="javascript:void(0)"><img src="./img/footer_award17_03.jpg" alt=""></a></li>
+                        <li><a href="javascript:void(0)"><img src="./img/footer_award17_04.jpg" alt=""></a></li>
+                        <li><a href="javascript:void(0)"><img src="./img/footer_award17_05.jpg" alt=""></a></li>
+                        <li><a href="javascript:void(0)"><img src="./img/footer_award17_06.jpg" alt=""></a></li>
                     </div>
                 </ul>
             </li>   
@@ -752,16 +752,19 @@
                                 <li><a href="#">사이트맵</a></li>
                             </ul>
                         </li>
-                        <li class="f3-row3">
-                            <ul>
-                                
-                            </ul>
-                        </li>
-                        <li class="f3-row4">
-                            <ul>
-
-                            </ul>
-                        </li>
+                    </li>
+                    <li class="f3-row3">
+                        <ul class="fixedclear">
+                            <li>사업자등록번호 : 201-81-21515</li> 
+                            <li>(주)스타벅스커피 코리아 대표이사 : 송 데이비드 호섭</li> 
+                            <li>TEL : 1522-3232</li> 
+                            <li>개인정보 책임자 : 장석현</li>
+                        </ul>
+                    </li>
+                    <li class="f3-row4">
+                        <ul>
+                            <li>&copy; 2020 Starbucks Coffee Company. All Rights Reserved.</li>
+                        </ul>
                     </ul>
                 </li>
             </ul>
