--- a/10_30/10_30_프로젝트_브란도_레스토랑_반응형_웹사이트제작/index.html
+++ b/10_30/10_30_프로젝트_브란도_레스토랑_반응형_웹사이트제작/index.html
@@ -55,7 +55,49 @@
     <li><a href="#footer" title="하단바로가기">하단바로가기</a></li>
 </ul>
 <div id="wrap">
+    <header id="header"></header> <!-- 태그 안에 id는 바로가기 메뉴 -->
+    <main id="main">
+        <section id="section01"> <!-- 작업순서 1번(왜냐면 얘가 있어야 header가 보임) -->
 
+        </section>
+        <section id="section02">
+
+        </section>
+        <section id="section03">
+
+        </section>
+        <section id="section04">
+
+        </section>
+        <section id="section05">
+
+        </section>
+        <section id="section06">
+
+        </section>
+        <section id="section07">
+
+        </section>
+        <section id="section08">
+
+        </section>
+        <section id="section09">
+
+        </section>
+        <section id="section10">
+
+        </section>
+        <section id="section11">
+
+        </section>
+        <section id="section12">
+
+        </section>
+        <section id="section13">
+
+        </section>
+    </main>
+    <footer id="footer"></footer>
 </div>
 </body>
 </html>
