footer_본문내용수정

--- a/10_30/10_30_프로젝트_스타벅스_알드라이브용/index.html
+++ b/10_30/10_30_프로젝트_스타벅스_알드라이브용/index.html
@@ -697,32 +697,32 @@
                     </li>
                     <li>
                         <dl>
-                            <dt><a href="#" title="COMPANY">COMPANY</a></dt>
-                            <dd><a href="#" title="한눈에 보기">한눈에 보기</a></dd>
+                            <dt><a href="#" title="CORPORATE SALES">CORPORATE SALES</a></dt>
+                            <dd><a href="#" title="단체 및 기업 구매 안내">단체 및 기업 구매 안내</a></dd>
                         </dl>
                     </li>
                     <li>
                         <dl>
-                            <dt><a href="#" title="COMPANY">COMPANY</a></dt>
-                            <dd><a href="#" title="한눈에 보기">한눈에 보기</a></dd>
-                            <dd><a href="#" title="스타벅스 사명">스타벅스 사명</a></dd>
+                            <dt><a href="#" title="PARTNERSHIP">PARTNERSHIP</a></dt>
+                            <dd><a href="#" title="신규 입점 제의">신규 입점 제의</a></dd>
+                            <dd><a href="#" title="협력 고객사 등록신청">협력 고객사 등록신청</a></dd>
                         </dl>
                     </li>
                     <li>
                         <dl>
-                            <dt><a href="#" title="COMPANY">COMPANY</a></dt>
-                            <dd><a href="#" title="한눈에 보기">한눈에 보기</a></dd>
-                            <dd><a href="#" title="스타벅스 사명">스타벅스 사명</a></dd>
-                            <dd><a href="#" title="스타벅스 소개">스타벅스 소개</a></dd>
-                            <dd><a href="#" title="국내 뉴스룸">국내 뉴스룸</a></dd>
-                            <dd><a href="#" title="세계의 스타벅스">세계의 스타벅스</a></dd>
+                            <dt><a href="#" title="ONLINE COMMUNITY">ONLINE COMMUNITY</a></dt>
+                            <dd><a href="#" title="페이스북">페이스북</a></dd>
+                            <dd><a href="#" title="트위터">트위터</a></dd>
+                            <dd><a href="#" title="유튜브">유튜브</a></dd>
+                            <dd><a href="#" title="블로그">블로그</a></dd>
+                            <dd><a href="#" title="인스타그램">인스타그램</a></dd>
                         </dl>
                     </li>
                     <li>
                         <dl>
-                            <dt><a href="#" title="COMPANY">COMPANY</a></dt>
-                            <dd><a href="#" title="한눈에 보기">한눈에 보기</a></dd>
-                            <dd><a href="#" title="스타벅스 사명">스타벅스 사명</a></dd>
+                            <dt><a href="#" title="RECRUIT">RECRUIT</a></dt>
+                            <dd><a href="#" title="채용 소개">채용 소개</a></dd>
+                            <dd><a href="#" title="채용 지원하기">채용 지원하기</a></dd>
                         </dl>
                     </li>
                 </ul>
