--- a/10_30/10_30_프로젝트_스타벅스_알드라이브용/index.html
+++ b/10_30/10_30_프로젝트_스타벅스_알드라이브용/index.html
@@ -25,7 +25,7 @@
     <!-- 오픈소스 -->
     
     <script src="./js/lib/jquery-1.12.4.min.js"></script>
-    <!-- <script src="./js/lib/prefixfree.min.js"></script> -->
+    <script src="./js/lib/prefixfree.min.js"></script>
     <script src="./js/lib/jquery.touchSwipe.js"></script> <!-- 터치 가능하게 해주는 제이쿼리 라이브러리 -->
     <script src="./js/lib/jquery.easing.1.3.js"></script>
 
