주석정리_언제_날_잡아서_정리_싹_하기

--- a/10_30/10_30_프로젝트_스타벅스_알드라이브용/index.html
+++ b/10_30/10_30_프로젝트_스타벅스_알드라이브용/index.html
@@ -80,7 +80,7 @@
                                     <li><a href="#" class="main-btn" title="COFFEE">COFFEE</a>
                                     <div class="sub sub1">
                                         <ul>
-                                            <li> <!-- 1행(top) --> <!-- 하나의 행에 여섯개의 칸 = 화면에는 1행에 5칸, 1칸은 밀려내려가게, 전체 100%를 20%씩 줘 -->
+                                            <li> <!-- 1행(top) -->
                                             <div class="sub-wrap"> 
                                                 <ul class="fixedclear">
                                                     <li> <!-- 첫번째칸 -->
@@ -128,7 +128,7 @@
                                                     </li>
                                                 </ul>
 
-                                                <ul class="fixedclear"> <!-- 1-1행(float써줘서 밑으로 내려가니까 아예 행을 만들어줌) -->
+                                                <ul class="fixedclear"> 
                                                     <li> <!-- 여섯번째칸 -->
                                                         <ul>
                                                             <li><a href="#" title="커피 이야기">커피 이야기</a></li>
