--- a/10_30/10_30_프로젝트_스타벅스_알드라이브용/index.html
+++ b/10_30/10_30_프로젝트_스타벅스_알드라이브용/index.html
@@ -642,10 +642,10 @@
 
                 <div class="right-title-wrap">
                     <span class="title-01">
-                        <img src="./img/store_txt01.png" alt="스타벅스를 경험해보세요...">
+                        <img src="./img/store_txt01.png" alt="스타벅스를 가까이에서 경험해보세요.">
                     </span>
                     <span class="title-02">
-                        <img src="./img/store_txt02.png" alt="차별화된 경험을 누릴수 있는 리저브매장...">
+                        <img src="./img/store_txt02.png" alt="차별화된 경험을 누릴수 있는 리저브매장">
                     </span>
                     <span class="store-find-wrap">
                         <a href="#" title="매장 찾기">매장 찾기</a>
